--- a/AYSAddonInstaller/AYSAddonInstaller/AYSAddonInstaller/AYSAddonInstaller.vbproj
+++ b/AYSAddonInstaller/AYSAddonInstaller/AYSAddonInstaller/AYSAddonInstaller.vbproj
@@ -87,7 +87,7 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup>
-    <OptionInfer>On</OptionInfer>
+    <OptionInfer>Off</OptionInfer>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System">
